--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,13 @@
 html,
 body {
+  background-color: aliceblue;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+    Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+html {
+  margin-left: calc(100vw - 100%);
 }
 
 a {
