adding in user type

--- a/styles/SearchResults.module.css
+++ b/styles/SearchResults.module.css
@@ -6,6 +6,25 @@
   justify-content: center;
   width: 80%;
 }
+.search {
+  margin: 1rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  border: 1px solid #eaeaea;
+  width: 20rem;
+  transition: color 0.15s ease, border-color 0.15s ease, width 0.15s ease;
+}
+
+.search:hover,
+.search:focus,
+.search:active {
+  border-color: #236dc2;
+}
+
+.search:focus,
+.search:active {
+  width: 25rem;
+}
 
 .card {
   height: 12rem;
