--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -96,7 +96,7 @@
   border: 1.5px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  min-height: 12rem;
+  min-height: 14rem;
   cursor: pointer;
 }
 
@@ -148,6 +148,11 @@
   transition: color 0.15s ease;
 }
 .connect:hover span {
+  color: #236dc2;
+}
+
+.completed {
+  height: 2rem;
   color: #236dc2;
 }
 
