--- a/styles/Placement.module.css
+++ b/styles/Placement.module.css
@@ -10,8 +10,14 @@
 .cards {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 1rem;
+}
+
+.card {
+  margin: 1rem;
 }
 
 .link {
@@ -21,57 +27,6 @@
 }
 
 .link:hover {
-  color: #236dc2;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1.5px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-height: 8rem;
-  width: 18rem;
-  cursor: pointer;
-  overflow: hidden;
-  transition: max-height 0.5s ease;
-}
-
-.card p {
-  color: transparent;
-  transition: color 0.15s ease;
-}
-
-.card:hover {
-  max-height: 14rem;
-  color: #236dc2;
-  border-color: #236dc2;
-}
-
-.card:hover p {
-  color: grey;
-}
-
-.module {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 90%;
-}
-
-.subject {
-  padding: 0.5rem 1rem 0.5rem 1rem;
-  margin: 1rem;
-  border: 1px solid #eaeaea;
-  border-radius: 1rem;
-}
-
-.subject a:hover {
   color: #236dc2;
 }
 
