--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,6 +56,7 @@
   line-height: 1.15;
   font-size: 3.5rem;
   opacity: 0.8;
+  color: rgb(45, 55, 72);
 }
 
 .title,
@@ -91,20 +92,23 @@
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
-  color: inherit;
+  color: white;
+  background-color: #319795;
   text-decoration: none;
-  border: 1.5px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   min-height: 14rem;
   cursor: pointer;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #236dc2;
   border-color: #236dc2;
+  color: #236dc2;
 }
 
 .card h3 {
