--- a/styles/Skill.module.css
+++ b/styles/Skill.module.css
@@ -62,6 +62,7 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 90%;
+  margin-top: 3rem;
 }
 
 .subject {
@@ -73,6 +74,11 @@
 
 .subject a:hover {
   color: #236dc2;
+}
+
+.image {
+  padding-top: 1rem;
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
